@@ -421,13 +421,16 @@ public class DataTypeDouble extends FloatingPointBase implements IDataTypeCompon
 	 */
 	public String getWhereClauseValue(Object value, ISQLDatabaseMetaData md)
 	{
-		if (value == null || value.toString() == null || value.toString().length() == 0) return _colDef.getLabel()
-			+ " IS NULL";
-		else
-		// since we cannot do exact matches on floating point
-		// numbers, we cannot use this field in the WHERE clause.
-		return null;
-		// return _colDef.getLabel() + "=" + value.toString();
+		if (value == null || value.toString() == null || value.toString().length() == 0) 
+		{
+			return _colDef.getColumnName() + " IS NULL";
+		} 
+		else 
+		{
+			// since we cannot do exact matches on floating point
+			// numbers, we cannot use this field in the WHERE clause.
+			return null;
+		}
 	}
 
 	/**
